refactor: 메소드 분리, 리미터 법칙 적용