@@ -1,14 +1,13 @@
 package bulletin.board.api.service.post.response;
 
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.stream.Collectors;
-
 import bulletin.board.domain.member.Member;
 import bulletin.board.domain.post.Post;
 import bulletin.board.domain.post.UploadFile;
 import lombok.Builder;
 import lombok.Getter;
+
+import java.time.LocalDateTime;
+import java.util.List;
 
 @Getter
 @Builder
@@ -25,7 +24,7 @@ public class PostDetailResponse {
 	private boolean empathyButton;
 	private List<String> imageUrls;
 
-	public static PostDetailResponse of(Post post, Member member) {
+	public static PostDetailResponse of(final Post post, final Member member) {
 		return PostDetailResponse.builder()
 									.id(post.getId())
 									.title(post.getTitle())
@@ -38,7 +37,7 @@ public class PostDetailResponse {
 									.empathyButton(post.canEmpathy(member))
 									.imageUrls(post.getImages().stream()
 										.map(UploadFile::getImageUrl)
-										.collect(Collectors.toList()))
+										.toList())
 									.build();
 	}
 }
