@@ -1,8 +1,8 @@
 package bulletin.board.api.service.post.response;
 
-import bulletin.board.exceptions.constant.ErrorCode;
 import bulletin.board.domain.post.UploadFile;
 import bulletin.board.exceptions.WrongPathException;
+import bulletin.board.exceptions.constant.ErrorCode;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
@@ -10,7 +10,6 @@ import org.springframework.core.io.UrlResource;
 
 import java.net.MalformedURLException;
 import java.util.List;
-import java.util.stream.Collectors;
 @Slf4j
 @Getter
 @Builder
@@ -19,18 +18,17 @@ public class UploadFileResponse {
     private String name;
     private UrlResource url;
 
-    public static List<UploadFileResponse> of(List<UploadFile> imageFiles) {
+    public static List<UploadFileResponse> from(final List<UploadFile> imageFiles) {
         log.info("사이즈 = {}", imageFiles.size());
 
         return imageFiles.stream()
                 .peek(uploadFile -> log.info("image {}, {}" ,uploadFile.getUploadFileName(), uploadFile.getPath()))
-                .map(UploadFileResponse::of)
+                .map(UploadFileResponse::from)
                 .peek(r -> log.info("r {}, {}" ,r.getName(), r.getUrl()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public static UploadFileResponse of(UploadFile imageFiles) {
-
+    public static UploadFileResponse from(final UploadFile imageFiles) {
         try {
             return UploadFileResponse.builder()
                     .name(imageFiles.getUploadFileName())
